Adding the docker with actor creation.
Now the docker can create the template of 2D/3D actors or AI.

--- a/addons/Docker/plugin.cfg
+++ b/addons/Docker/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="NaixGamesDockerExample"
-description="Example of Docker tool for Development of Naix Games"
+name="NaixGamesDocker"
+description="Docker tool for Development of Naix Games"
 author="Naix"
-version="0.1"
+version="0.2"
 script="NaixDocker.cs"
