--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -41,8 +41,8 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="NaixGames"
+application/product_name="CoreToolsTest"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
