--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
         name: Download Godot 4.0.3
         command: |
           wget -q https://downloads.tuxfamily.org/godotengine/4.0.3/mono/Godot_v4.0.3-stable_mono_linux_x86_64.zip
-          unzip Godot_v4.0.3-stable_linux.x86_64.zip
-          mv Godot_v4.0.3-stable_linux.x86_64 godot
+          unzip Godot_v4.0.3-stable_mono_linux.x86_64.zip
+          mv Godot_v4.0.3-stable_mono_linux.x86_64 godot
           chmod +x godot
     - run:
         name: Download Godot 4.0.3 Export Templates
