--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     - run:
         name: Generate Mono
         command: |
-          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --generate-mono-glue modules/mono/glue
+          dotnet --info
     - run:
         name: Download Godot 4.0.3 Export Templates
         command: |
