--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
         name: Install dependencies
         command: |
           sudo apt-get update
-          sudo apt-get -y install wget zip unzip
+          sudo apt-get -y install wget zip unzip dotnet-sdk-6.0
     - run:
         name: Download Godot 4.0.3
         command: |
@@ -26,10 +26,6 @@ jobs:
           unzip Godot_v4.0.3-stable_mono_linux_x86_64.zip
           mv Godot_v4.0.3-stable_mono_linux_x86_64 godot
           chmod +x godot/Godot_v4.0.3-stable_mono_linux.x86_64
-    - run:
-        name: Generate Mono
-        command: |
-          dotnet --info
     - run:
         name: Download Godot 4.0.3 Export Templates
         command: |
