--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,14 @@ jobs:
           unzip Godot_v4.0.3-stable_export_templates.tpz -d ~/.local/share/godot/export_templates
           mv ~/.local/share/godot/export_templates/templates ~/.local/share/godot/export_templates/4.0.3.stable.mono
     - run:
+        name: Give rcedit application rights
+        command: |
+          chmod +x rcedit\rcedit-x86.exe
+    - run:
         name: Export Windows64 build
         command: |
           mkdir -p ExportBuildAuto
-          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --export-debug Windows64 project.godot "ExportBuildAuto/CoreExportTest.exe"    
+          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --export-debug Windows64 project.godot "ExportBuildAuto/CoreExport.exe"    
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
