--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           wget -q https://downloads.tuxfamily.org/godotengine/4.0.3/mono/Godot_v4.0.3-stable_mono_linux_x86_64.zip
           unzip Godot_v4.0.3-stable_mono_linux_x86_64.zip
           mv Godot_v4.0.3-stable_mono_linux_x86_64 godot
-          chmod +x godot/Godot_v4.0.3-stable_mono_linux.x86_64
+          chmod +rwx godot/Godot_v4.0.3-stable_mono_linux.x86_64
     - run:
         name: Download Godot 4.0.3 Export Templates
         command: |
