--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
         name: Export Windows64 build
         command: |
           mkdir -p ExportBuildAuto
-          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --export-debug Windows64 project.godot "ExportBuildAuto/CoreExport.exe"  
+          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --export-debug Windows64 project.godot "ExportBuildAuto/CoreExport.exe"  
     - run:
           name: Upload Win64 build
           command: ./butler push ExportBuildAuto NaixGames/CoreTools:win-64bit
