--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
     - run:
         name: Debug step
         command: |
-          ls /
+          ls ./
+          ls ./godot
     - run:
         name: Download butler
         command: |
@@ -50,7 +51,7 @@ jobs:
           chmod +rwx butler
     - run:
           name: Upload Win64 build
-          command: ./butler push ExportBuildAuto NaixGames/CoreTools:win-64bit
+          command: ./butler push ./godot/ExportBuildAuto NaixGames/CoreTools:win-64bit
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
