--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
     - run:
         name: Export Windows64 build
         command: |
+          mkdir -p .godot/editor .godot/imported
           mkdir -p ExportBuildAuto
           ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --export-debug Windows64 project.godot "ExportBuildAuto/CoreExport.exe"  
     - run:
