--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
         name: Build Solutions
         command: |
           ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --build-solutions
+    - run:
         name: Export Windows64 build
         command: |
           mkdir -p .godot/editor .godot/imported
