--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
     - run:
         name: Build Solutions
         command: |
-          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --build-solutions
+          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --build-solutions --quit
     - run:
         name: Export Windows64 build
         command: |
