--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,8 @@ jobs:
         command: |
           mkdir -p .godot/editor .godot/imported
           mkdir -p ExportBuildAuto
-          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --export-release Windows64 project.godot "ExportBuildAuto/CoreExport.exe"
-          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --export-release Windows64 project.godot "ExportBuildAuto/CoreExport.exe"  
+          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --export-debug Windows64 project.godot "ExportBuildAuto/CoreExport.exe"
+          ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 --headless --export-debug Windows64 project.godot "ExportBuildAuto/CoreExport.exe"  
     - run:
         name: Download butler
         command: |
