--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,10 @@ jobs:
           unzip Godot_v4.0.3-stable_export_templates.tpz -d ~/.local/share/godot/export_templates
           mv ~/.local/share/godot/export_templates/templates ~/.local/share/godot/export_templates/4.0.3.stable.mono
     - run:
+        name: Force imports
+        command: |
+          time 60s ./godot/Godot_v4.0.3-stable_mono_linux.x86_64 -e
+    - run:
         name: Export Windows64 build
         command: |
           mkdir -p .godot/editor .godot/imported
