--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
     - run:
         name: Import assets
         import-assets:
-        command:
-          - godot -v -e --quit --headless
+        command: |
+          ./godot/Godot_v4.1.1-stable_mono_linux.x86_64 -v -e --quit --headless
     - run:
         name: Export Windows64 build
         command: |
