--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -14,13 +14,12 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_encryption_key=""
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_script=1
+debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -28,9 +27,6 @@ texture_format/etc=true
 texture_format/etc2=true
 binary_format/architecture="x86_64"
 codesign/enable=false
-codesign/identity_type=0
-codesign/identity=""
-codesign/password=""
 codesign/timestamp=true
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
@@ -64,6 +60,9 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+debug/export_console_script=1
 
 [preset.1]
 
@@ -80,7 +79,6 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_encryption_key=""
 
 [preset.1.options]
 
@@ -94,12 +92,6 @@ architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-keystore/debug=""
-keystore/debug_user=""
-keystore/debug_password=""
-keystore/release=""
-keystore/release_user=""
-keystore/release_password=""
 version/code=1
 version/name="1.0"
 package/unique_name="org.godotengine.$genname"
@@ -273,6 +265,8 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
 
 [preset.2]
 
@@ -289,14 +283,14 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
-script_encryption_key=""
 
 [preset.2.options]
 
+export/distribution_type=1
 binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_script=1
+debug/export_console_wrapper=1
 application/icon=""
 application/icon_interpolation=4
 application/bundle_identifier=""
@@ -306,11 +300,18 @@ application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 application/copyright_localized={}
+application/min_macos_version="10.12"
 display/high_res=true
+xcode/platform_build="14C18"
+xcode/sdk_version="13.1"
+xcode/sdk_build="22C55"
+xcode/sdk_name="macosx13.1"
+xcode/xcode_version="1420"
+xcode/xcode_build="14C18"
 codesign/codesign=1
+codesign/installer_identity=""
+codesign/apple_team_id=""
 codesign/identity=""
-codesign/certificate_file=""
-codesign/certificate_password=""
 codesign/entitlements/custom_file=""
 codesign/entitlements/allow_jit_code_execution=false
 codesign/entitlements/allow_unsigned_executable_memory=false
@@ -336,12 +337,6 @@ codesign/entitlements/app_sandbox/files_movies=0
 codesign/entitlements/app_sandbox/helper_executables=[]
 codesign/custom_options=PackedStringArray()
 notarization/notarization=0
-notarization/apple_id_name=""
-notarization/apple_id_password=""
-notarization/apple_team_id=""
-notarization/api_uuid=""
-notarization/api_key=""
-notarization/api_key_id=""
 privacy/microphone_usage_description=""
 privacy/microphone_usage_description_localized={}
 privacy/camera_usage_description=""
@@ -375,3 +370,7 @@ open \"{temp_dir}/{exe_name}.app\" --args {cmd_args}"
 ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
 kill $(pgrep -x -f \"{temp_dir}/{exe_name}.app/Contents/MacOS/{exe_name} {cmd_args}\")
 rm -rf \"{temp_dir}\""
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+debug/export_console_script=1
+notarization/apple_team_id=""
