Got new actor manager organization working and the template creation tool upgraded.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -18,6 +18,12 @@ list=Array[Dictionary]([{
 "path": "res://IconChange/ReplaceIcon.gd"
 }, {
 "base": &"Resource",
+"class": &"StateManagerPointer",
+"icon": "",
+"language": &"C#",
+"path": "res://CoreTools/FSM/Scripts/StateManagerPointer.cs"
+}, {
+"base": &"Resource",
 "class": &"Vector2Data",
 "icon": "",
 "language": &"C#",
