Finished changing FSM system. New version working nicely. Rolled this on the first couple of AI tests and it works fine (need further updating though()

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -53,3 +53,17 @@ state={
 "selection": false,
 "syntax_highlighter": "Plain Text"
 }
+
+[res://AIExamples/Chapter1/Task1/BobReferenceHandler.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 14,
+"row": 18,
+"scroll_position": 19.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
