Bringing changes form projectea

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://CoreTools/FSM/Scripts/StateManagerPointer.cs")
+dock_filesystem_selected_paths=PackedStringArray("res://CoreTools/FSM/Scenes/Actor/Player/StateManager/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://CoreTools/", "res://CoreTools/FSM/", "res://CoreTools/FSM/Scripts/", "res://CoreTools/FSM/Scripts/Editor/", "res://CoreTools/FSM/Scenes/", "res://CoreTools/FSM/Scenes/Actor/", "res://CoreTools/FSM/Scenes/Actor/Player/", "res://CoreTools/FSM/Scenes/Actor/Player/StateManager/", "res://AIExamples/", "res://AIExamples/Chapter1/", "res://AIExamples/Chapter1/Task2/", "res://AIExamples/Chapter1/Task1/")
 dock_3="Scene,Import"
 dock_4="FileSystem,NaixDock"
