Testing another dumb thing

--- a/addons/NaixInspector/plugin.cfg
+++ b/addons/NaixInspector/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="NaixInspector"
 description="Pluging for modifications done for the inspector for Naix Games"
-author=""
+author="Naix"
 version=""
 script="NaixInspector.cs"
