trying another thing ...

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 #ignore everything but the generated mono files
 .godot/editor
-.godot/imported
+.godot/imported/*
 .godot/shader_cache
 
+#include icon for docker so godot doesnt crash. I think this is a godot problem (the headless version shouldnt
+#load this!) but it is what it is.
+!.godot/imported/ExpandableButtomIcon.png-c4420c6394424e84cb35282e80a630db.ctex
 
 .addons/gdUnit4/tmp-update
