lets see if this works

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           output-var-name: 'VERSION_NAME_STRING'
       - name: export game for github
         id: export
-        uses: firebelley/godot-export@v5.2.1
+        uses: NaixGames/godot-export@release-1
         with:
           godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/4.3/mono/Godot_v4.3-stable_mono_linux_x86_64.zip
           godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/4.3/mono/Godot_v4.3-stable_mono_export_templates.tpz
