--- a/.github/workflows/testExport.yml
+++ b/.github/workflows/testExport.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Made directory
         run: 
-          mkdir -p ~/.local/export
+          mkdir -p ./mygithub/build/destination
 
       - name: Give writing privileges
         run: 
@@ -63,5 +63,5 @@ jobs:
 
       - name: Build godot
         run:
-          godot --headless --verbose --export-release "Windows64" ~/.local/export
+          godot --headless --verbose --export-release "Windows64" ./mygithub/build/destination
 
