--- a/.github/workflows/testExport.yml
+++ b/.github/workflows/testExport.yml
@@ -63,5 +63,5 @@ jobs:
 
       - name: Build godot
         run:
-          godot --headless --verbose --export-release "Windows64" ./mygithub/build/destination
+          /home/runner/godot/Godot_v4.3-stable_mono_linux_x86_64/Godot_v4.3-stable_mono_linux.x86_64 --headless --verbose --export-release "Windows64" ./mygithub/build/destination
 
