--- a/.github/workflows/testExport.yml
+++ b/.github/workflows/testExport.yml
@@ -22,6 +22,14 @@ jobs:
       - uses: actions/checkout@v4
         name: 🧾 Checkout
 
+      - name: Get version tag
+        uses: michpohl/action-concatenate-strings@v1.0.1
+        with:
+          first: "internal-fallback-"
+          second: ${{ github.run_number }}
+          separator: '-'
+          output-var-name: 'VERSION_NAME_STRING'
+
       - uses: actions/setup-dotnet@v3
         name: 💽 Setup .NET SDK
         with:
@@ -60,11 +68,15 @@ jobs:
         run: 
           mkdir -p ./mygithub/build
 
-      #- name: Give writing privileges
-      #  run: 
-       #   chmod +rwx /home/runner/godot/Godot_v4.3-stable_mono_linux_x86_64/Godot_v4.3-stable_mono_linux.x86_64
-
       - name: Build godot
         run:
           godot --headless --verbose --export-release "Windows64" ./mygithub/build/destination
+
+      - name: create release
+        uses: ncipollo/release-action@v1.13.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          generateReleaseNotes: false
+          tag: ${{ env.VERSION_NAME_STRING }}
+          artifacts: ./mygithub/build/destination/* # Added "/*" at the end is glob pattern match for this action
 
