--- a/.github/workflows/testExport.yml
+++ b/.github/workflows/testExport.yml
@@ -73,8 +73,9 @@ jobs:
           godot --headless --verbose --export-release "Windows64" ./mygithub/build/destination
 
       - name: Zip release
-        run:
-          zip -r Windows64.zip ./mygithub/build/destination
+        uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r Windows64.zip ./mygithub/build/destination
 
       - name: create release
         uses: ncipollo/release-action@v1.13.0
