--- a/.github/workflows/testExport.yml
+++ b/.github/workflows/testExport.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         # Put the operating systems you want to run on here.
-        os: [windows-latest]
+        os: [ubuntu-latest]
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       DOTNET_NOLOGO: true
