--- a/.github/workflows/testExport.yml
+++ b/.github/workflows/testExport.yml
@@ -11,6 +11,8 @@ jobs:
       matrix:
         # Put the operating systems you want to run on here.
         os: [ubuntu-latest]
+    permissions:
+      contents: write
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       DOTNET_NOLOGO: true
